	- Base the Immelmann turn pitch direction on the local pitch angular velocity (i.e., pitch down if already rotating that way — fixes the pitch oscillation behaviour when targeting an opponent behind the craft while inverted near terrain).
	- Don't summon the NaN-Kraken when the post-terrain avoidance cool-down is 0.
- Weapons:
	- Fixes for initial bullet placement and simulated hit position when Krakensbane is not active.
  	- Missiles:
		  - Add new Orbital guidance option for Modular Missiles
		    - Missile will attempt to intercept orbital target at the user-set Max Speed value
      - Fix clustermissiles launching copies of themselves instead of submunitions.
	  - Fix for HEKV launching unguided in non-ideal situations.
- Countermeasures
	- Add vessel's velocity to chaff ejection particles.
	- Use vessel acceleration instead of velocity for chaff decoy factor calculation when in space.
- Vessel Mover:
	- Check for outdated loadMeta files when refreshing the craft list in the vessel selection window and update them since KSP doesn't update them when you save your craft!
	- Fix the spawn point selection sometimes not registering.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.

v1.6.8.0
IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCS in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI.
	- Fix custom ammobelt UI overwriting belts on heterogeneous weapon groups.
- AI / WM:
	- AI GUI fixes for surface AI.
	- Fix AI disengagement from launched nuclear/EMP ordinance if within projected blast radius.
	- Expose the weave strength factor as a tunable parameter for the surface and VTOL AI.