@@ -8,6 +8,7 @@
 		- Recommend using the cheat menu (Alt+F12) to place craft in orbit within physics range of each other.
 	- Base the Immelmann turn pitch direction on the local pitch angular velocity (i.e., pitch down if already rotating that way — fixes the pitch oscillation behaviour when targeting an opponent behind the craft while inverted near terrain).
 	- Don't summon the NaN-Kraken when the post-terrain avoidance cool-down is 0.
+	- Perform banked turns when the target is behind us at long range instead of Immelmann turns or turning directly to target. Threshold is clamp(8 * max speed, 1000, 4000).
 - Weapons:
 	- Fixes for initial bullet placement and simulated hit position when Krakensbane is not active.
   	- Missiles:
